[package]
name = "rust_p2p_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
tokio-rustls = "0.26"
rustls = { version="0.23", features = ["ring"]}
rustls-pki-types = "1.4"
rcgen = "0.13"
url = "2.5"
futures-util = "0.3"

# コマンドライン引数の解析
clap = { version = "4.5", features = ["derive"] }